# RonaScript

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  RonaScript  build.sh  memory_notes.txt  todo.txt
.github/workflows/: build.yml  cmake.yml  test.yml
PyRonaScript/: cpp_helpers.py  example.rn  example2.rn  future_ideas.rn  main.py  notes.txt  standard_library.txt
PyRonaScript/CodeGen/: __init__.py  instructions.py
PyRonaScript/Grammar/: Grammar.bnf
PyRonaScript/Lexer/: lexer.py  lexer_base.py  tokens.py
codegen/: code_generator.cpp  code_generator.h
doc/: Grammar.bnf  README.md  _Grammar.bnf  rnc_file_layout.txt  syntax.md  types.md
examples/: Hello.rn  SimpleClass.rn  Test.rn  Test.rnc  pragma.rn
examples/ffi_example/: CMakeCache.txt  CMakeLists.txt  Makefile  build_lib.sh  cmake_install.cmake  ffi_example.rn  hello.cpp  libHello.dylib
exceptions/: BaseException.cpp  BaseException.h  InvalidIndexError.cpp  InvalidIndexError.h  MemoryError.cpp  MemoryError.h  NameNotFoundError.cpp  NameNotFoundError.h  RuntimeError.cpp  RuntimeError.h  SourceNotFoundError.cpp  SourceNotFoundError.h  TypeAssignmentError.cpp  TypeAssignmentError.h  TypeCastError.cpp  TypeCastError.h  UnexpectedSymbolError.cpp  UnexpectedSymbolError.h  UnsupportedOperationError.cpp  UnsupportedOperationError.h
lexer/: lexer.cpp  lexer.h  token.cpp  token.h  token_type.h
lib/: Collection.rn  Convert.rn  File.rn  Math.rn  Matrix.rn  PSO.rn  PSO.rnc  Path.rn  PrettyPrint.rn  Statistics.rn  Stats.rn  Structures.rn  System.rn
parser/: parser.cpp  parser.h
scripts/: build.sh  configure.sh  create_test.sh  gen_builtins_list.py  run_tests.sh  update_source_header.py
src/: RnBuildInfo.h  RnVersionInfo.h  build_info.h  main.cpp
src/builtins/: CMakeLists.txt  RnBuiltins.cpp  RnBuiltins.h  RnBuiltins_Array.cpp  RnBuiltins_Array.h  RnBuiltins_IO.cpp  RnBuiltins_IO.h  RnBuiltins_Math.cpp  RnBuiltins_Math.h  RnBuiltins_String.cpp  RnBuiltins_String.h  RnBuiltins_System.cpp  RnBuiltins_System.h  RnBuiltins_Time.cpp  RnBuiltins_Time.h  RnBuiltins_Type.cpp  RnBuiltins_Type.h
src/common/: CMakeLists.txt  RnBuildInfo.h  RnCompilerPhase.h  RnConfig.cpp  RnConfig.h  RnDefs.h  RnInternment.cpp  RnInternment.h  RnString.cpp  RnString.h  RnType.cpp  RnType.h
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
src/memory_mgmt/: CMakeLists.txt  RnAllocator.cpp  RnAllocator.h  RnLinearAllocator.cpp  RnLinearAllocator.h  RnObjectAllocator.cpp  RnObjectAllocator.h  RnSlabAllocator.cpp  RnSlabAllocator.h  RnStdAllocator.h
src/objects/: CMakeLists.txt  RnAnyObject.cpp  RnAnyObject.h  RnArrayObject.cpp  RnArrayObject.h  RnClassObject.cpp  RnClassObject.h  RnFloatObject.cpp  RnFloatObject.h  RnFunctionObject.cpp  RnFunctionObject.h  RnIntObject.h  RnObject.cpp  RnObject.h  RnObjectBase.h  RnPackedObject.cpp  RnPackedObject.h  RnStringObject.cpp  RnStringObject.h
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h  RnAstCheckPolicy.cpp  RnAstCheckPolicy.h  RnAstCheckPolicy_Bounds.cpp  RnAstCheckPolicy_Bounds.h  RnAstCheckPolicy_NonReturningFunction.cpp  RnAstCheckPolicy_NonReturningFunction.h  RnAstCheckPolicy_Type.cpp  RnAstCheckPolicy_Type.h  RnAstChecker.cpp  RnAstChecker.h  RnAstOptimizer.cpp  RnAstOptimizer.h  RnAstSymbolTable.cpp  RnAstSymbolTable.h  RnAstValidator.cpp  RnAstValidator.h  RnAstVisitor.h  RnSymbolTableManager.cpp  RnSymbolTableManager.h  RnTypeComposite.cpp  RnTypeComposite.h  verification.txt
src/parser/ast/: AliasDecl.cpp  AliasDecl.h  ArgDecl.cpp  ArgDecl.h  ArrayLiteral.cpp  ArrayLiteral.h  AssignmentStmt.cpp  AssignmentStmt.h  Ast.cpp  Ast.h  AstNode.cpp  AstNode.h  AttributeAccess.cpp  AttributeAccess.h  BinaryExpr.cpp  BinaryExpr.h  BoolLiteral.cpp  BoolLiteral.h  BreakStmt.cpp  BreakStmt.h  CMakeLists.txt  CatchBlock.cpp  CatchBlock.h  ClassDecl.cpp  ClassDecl.h  ConditionalStmt.cpp  ConditionalStmt.h  ContinueStmt.cpp  ContinueStmt.h  DeleteStmt.cpp  DeleteStmt.h  ElifStmt.cpp  ElifStmt.h  ElseStmt.cpp  ElseStmt.h  ExitStmt.cpp  ExitStmt.h  Expr.cpp  Expr.h  FloatLiteral.cpp  (+44 more)
src/util/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  File.cpp  File.h  FileInfo.cpp  FileInfo.h  Json.cpp  Json.h  LoopCounter.h  Path.cpp  Path.h  PtrStack.h  RnOS.cpp  RnOS.h  RnSequencer.h  RnStack.h  RnStringUtil.h  RonaSequencer.h  Settings.cpp  Settings.h  StopWatch.h  String.cpp  String.h  Time.h  log.cpp  log.h
src/util/MLib/: File.cpp  File.h  Json.cpp  Json.h  Log.cpp  Log.h  Math.cpp  Math.h  Path.h  Settings.cpp  Settings.h  StopWatch.h  String.cpp  String.h  Time.h  XML.cpp  XML.h
src/util/test/: CMakeLists.txt  Test_String.cpp
src/vm/: CMakeLists.txt  RnAnyObject.cpp  RnAnyObject.h  RnArrayObject.cpp  RnArrayObject.h  RnBoolObject.cpp  RnBoolObject.h  RnCallFrame.cpp  RnCallFrame.h  RnClass.cpp  RnClass.h  RnClassObject.cpp  RnClassObject.h  RnFloatObject.cpp  RnFloatObject.h  RnFunction.cpp  RnFunction.h  RnFunctionObject.cpp  RnFunctionObject.h  RnIntObject.cpp  RnIntObject.h  RnInternment.cpp  RnInternment.h  RnMemoryBlock.cpp  RnMemoryBlock.h  RnMemoryGroup.cpp  RnMemoryGroup.h  RnMemoryManager.cpp  RnMemoryManager.h  RnNullObject.cpp  RnNullObject.h  RnNumericObject.cpp  RnNumericObject.h  RnObject.cpp  RnObject.h  RnObjectBase.h  RnObjectList.cpp  RnObjectList.h  RnOpCode.cpp  RnOpCode.h  (+9 more)
src/vm/builtins/: RnBuiltins.cpp  RnBuiltins.h  RnBuiltins_Array.cpp  RnBuiltins_Array.h  RnBuiltins_IO.cpp  RnBuiltins_IO.h  RnBuiltins_Math.cpp  RnBuiltins_Math.h  RnBuiltins_String.cpp  RnBuiltins_String.h  RnBuiltins_Time.cpp  RnBuiltins_Type.cpp
support/: Log.cpp  Log.h  RnStack.h
test/: functional_runner.py  junit_reporter.py  run_tests.sh
vm/: builtins.cpp  builtins.h  instruction.cpp  instruction.h  memory.cpp  memory.h  memory_interface.cpp  memory_interface.h  op_codes.h  rona_class.cpp  rona_class.h  rona_class_decl.cpp  rona_class_decl.h  rona_function.cpp  rona_function.h  rona_module.cpp  rona_module.h  rona_null.h  rona_object.cpp  rona_object.h  rona_type.cpp  rona_type.h  scope.cpp  scope.h  virtual_machine.cpp  virtual_machine.h
(+277 files in other folders)
